[gd_scene load_steps=109 format=2]

[ext_resource path="res://Inimigos/Mecha-stone Golem 0.1/PNG sheet/Character_sheet.png" type="Texture" id=1]
[ext_resource path="res://script_StoneBoss.gd" type="Script" id=2]
[ext_resource path="res://Inimigos/Mecha-stone Golem 0.1/weapon PNG/Laser_sheet.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 0, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 100, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 200, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 300, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 400, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 500, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 600, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 700, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 800, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 900, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 0, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 100, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 200, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 300, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 400, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 500, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 600, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 700, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 800, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 900, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 1 )
region = Rect2( 0, 800, 100, 100 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 1 )
region = Rect2( 100, 800, 100, 100 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 1 )
region = Rect2( 200, 800, 100, 100 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 1 )
region = Rect2( 300, 800, 100, 100 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 1 )
region = Rect2( 0, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 1 )
region = Rect2( 100, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 1 )
region = Rect2( 200, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 1 )
region = Rect2( 300, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 1 )
region = Rect2( 400, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 1 )
region = Rect2( 500, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 1 )
region = Rect2( 600, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 1 )
region = Rect2( 700, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 1 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 1 )
region = Rect2( 0, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 1 )
region = Rect2( 100, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 1 )
region = Rect2( 200, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 1 )
region = Rect2( 300, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 1 )
region = Rect2( 400, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 1 )
region = Rect2( 500, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 1 )
region = Rect2( 600, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 1 )
region = Rect2( 700, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 1 )
region = Rect2( 0, 500, 100, 100 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 1 )
region = Rect2( 100, 500, 100, 100 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 1 )
region = Rect2( 200, 500, 100, 100 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 1 )
region = Rect2( 300, 500, 100, 100 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 1 )
region = Rect2( 400, 500, 100, 100 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 1 )
region = Rect2( 500, 500, 100, 100 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 1 )
region = Rect2( 600, 500, 100, 100 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 1 )
region = Rect2( 0, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 1 )
region = Rect2( 100, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 1 )
region = Rect2( 200, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 1 )
region = Rect2( 300, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 1 )
region = Rect2( 400, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 1 )
region = Rect2( 500, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 1 )
region = Rect2( 600, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 1 )
region = Rect2( 0, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 1 )
region = Rect2( 100, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 1 )
region = Rect2( 200, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 1 )
region = Rect2( 300, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 1 )
region = Rect2( 400, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 1 )
region = Rect2( 500, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 1 )
region = Rect2( 600, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 1 )
region = Rect2( 700, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 1 )
region = Rect2( 800, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 1 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 1 )
region = Rect2( 300, 800, 100, 100 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 1 )
region = Rect2( 200, 800, 100, 100 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 1 )
region = Rect2( 100, 800, 100, 100 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 1 )
region = Rect2( 0, 800, 100, 100 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 1 )
region = Rect2( 900, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 1 )
region = Rect2( 800, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 1 )
region = Rect2( 700, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 1 )
region = Rect2( 600, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 1 )
region = Rect2( 500, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 1 )
region = Rect2( 400, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 1 )
region = Rect2( 300, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 1 )
region = Rect2( 200, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 1 )
region = Rect2( 100, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 1 )
region = Rect2( 0, 700, 100, 100 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "ArmorBuff",
"speed": 5.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ) ],
"loop": false,
"name": "Death",
"speed": 6.0
}, {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ) ],
"loop": true,
"name": "Glowing",
"speed": 8.0
}, {
"frames": [ SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ) ],
"loop": true,
"name": "Imune",
"speed": 7.0
}, {
"frames": [ SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ) ],
"loop": false,
"name": "LaserCast",
"speed": 10.0
}, {
"frames": [ SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ) ],
"loop": true,
"name": "Melee",
"speed": 6.0
}, {
"frames": [ SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ) ],
"loop": true,
"name": "RangeAttack",
"speed": 8.0
}, {
"frames": [ SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ) ],
"loop": true,
"name": "Spawn",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 115, 100 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 3 )
region = Rect2( 0, 100, 115, 100 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 3 )
region = Rect2( 0, 200, 115, 100 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 3 )
region = Rect2( 0, 300, 115, 100 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 3 )
region = Rect2( 0, 400, 115, 100 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 3 )
region = Rect2( 0, 500, 115, 100 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 3 )
region = Rect2( 0, 600, 115, 100 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 3 )
region = Rect2( 0, 700, 115, 100 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 3 )
region = Rect2( 0, 800, 115, 100 )

[sub_resource type="SpriteFrames" id=130]
animations = [ {
"frames": [ SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ) ],
"loop": true,
"name": "LaserCast",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=140]

[sub_resource type="CapsuleShape2D" id=28]
radius = 38.3592
height = 56.0166

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 21.9196, 41.4036 )

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 85.7572, 7.91728 )

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 87.793, 8.14931 )

[sub_resource type="RectangleShape2D" id=117]
extents = Vector2( 19.25, 60.5 )

[sub_resource type="RectangleShape2D" id=118]
extents = Vector2( 22, 60 )

[sub_resource type="CircleShape2D" id=119]
radius = 39.2713

[sub_resource type="CircleShape2D" id=120]
radius = 38.9681

[node name="StoneBoss" type="Node2D"]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
scale = Vector2( 1.64237, 1.64237 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
scale = Vector2( 2.16011, 2.16011 )
frames = SubResource( 27 )
animation = "Idle"
frame = 1
playing = true

[node name="LaserCast" type="AnimatedSprite" parent="KinematicBody2D"]
visible = false
position = Vector2( 0, -19.484 )
frames = SubResource( 130 )
animation = "LaserCast"
frame = 6
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/LaserCast"]
shape = SubResource( 140 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0.608877, 7.9154 )
shape = SubResource( 28 )

[node name="RayCast2D2Esquerdo" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( -58.4521, 48.7101 )
scale = Vector2( 1.5, 1.5 )
enabled = true
cast_to = Vector2( 0, 25.9787 )

[node name="RayCast2D2Direito" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( 55.4077, 48.7101 )
scale = Vector2( 1.5, 1.5 )
enabled = true
cast_to = Vector2( 3.8147e-06, 25.9787 )

[node name="Timer" type="Timer" parent="KinematicBody2D"]
wait_time = 15.0
autostart = true

[node name="ZonaDeDeteccaoEsquerda" type="Area2D" parent="KinematicBody2D"]
position = Vector2( -77.9362, 9.74202 )

[node name="Zona" type="CollisionShape2D" parent="KinematicBody2D/ZonaDeDeteccaoEsquerda"]
position = Vector2( -38.968, -4.87101 )
shape = SubResource( 29 )

[node name="ZonaDeDeteccaoDireita" type="Area2D" parent="KinematicBody2D"]
position = Vector2( 43.8391, 9.74202 )

[node name="Zona" type="CollisionShape2D" parent="KinematicBody2D/ZonaDeDeteccaoDireita"]
position = Vector2( 68.1941, -4.87101 )
shape = SubResource( 29 )

[node name="RangedAttackEsq" type="Area2D" parent="KinematicBody2D"]
position = Vector2( 14.613, -4.87101 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/RangedAttackEsq"]
modulate = Color( 1, 0, 0.140625, 1 )
position = Vector2( -189.969, 32.8635 )
scale = Vector2( 0.284, 3.232 )
shape = SubResource( 30 )

[node name="RangedAttackDir" type="Area2D" parent="KinematicBody2D"]
position = Vector2( -9.74202, -4.76837e-07 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/RangedAttackDir"]
modulate = Color( 1, 0, 0.140625, 1 )
position = Vector2( 180.227, 29.2261 )
scale = Vector2( 0.284, 3.232 )
shape = SubResource( 31 )

[node name="MeleeAttackDir" type="Area2D" parent="KinematicBody2D"]
scale = Vector2( 0.608876, 0.608876 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/MeleeAttackDir"]
position = Vector2( 92.75, 13 )
shape = SubResource( 117 )

[node name="MeleeAttackEsq" type="Area2D" parent="KinematicBody2D"]
scale = Vector2( 0.608876, 0.608876 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/MeleeAttackEsq"]
position = Vector2( -98, 13 )
shape = SubResource( 118 )

[node name="Position2DDir" type="Position2D" parent="KinematicBody2D"]
position = Vector2( 55.4077, -24.355 )
scale = Vector2( 0.608876, 0.608876 )

[node name="Position2DEsq" type="Position2D" parent="KinematicBody2D"]
position = Vector2( -58.4521, -24.355 )
scale = Vector2( 0.608876, 0.608876 )

[node name="Position2DDirLaser" type="Position2D" parent="KinematicBody2D"]
position = Vector2( 4.87101, -38.9681 )
scale = Vector2( 0.608876, 0.608876 )

[node name="Position2DEsqLaser" type="Position2D" parent="KinematicBody2D"]
position = Vector2( 4.87101, -38.9681 )
scale = Vector2( 0.608876, 0.608876 )

[node name="LaserAttackDir" type="Area2D" parent="KinematicBody2D"]
position = Vector2( 233.808, 38.9681 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/LaserAttackDir"]
shape = SubResource( 119 )

[node name="LaserAttackEsq" type="Area2D" parent="KinematicBody2D"]
position = Vector2( -238.679, 38.9681 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/LaserAttackEsq"]
position = Vector2( 4.57764e-05, 0 )
shape = SubResource( 120 )

[connection signal="animation_finished" from="KinematicBody2D/AnimatedSprite" to="KinematicBody2D" method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="KinematicBody2D/LaserCast" to="KinematicBody2D" method="_on_LaserCast_animation_finished"]
[connection signal="body_entered" from="KinematicBody2D/ZonaDeDeteccaoEsquerda" to="KinematicBody2D" method="ZonaDeDeteccaoEsquerda"]
[connection signal="body_exited" from="KinematicBody2D/ZonaDeDeteccaoEsquerda" to="KinematicBody2D" method="ZonaDeDeteccaoEsqOut"]
[connection signal="body_entered" from="KinematicBody2D/ZonaDeDeteccaoDireita" to="KinematicBody2D" method="ZonaDeDeteccaoDireita"]
[connection signal="body_exited" from="KinematicBody2D/ZonaDeDeteccaoDireita" to="KinematicBody2D" method="ZonaDeDeteccaoDirOut"]
[connection signal="body_entered" from="KinematicBody2D/RangedAttackEsq" to="KinematicBody2D" method="onRangedAttackEsq"]
[connection signal="body_exited" from="KinematicBody2D/RangedAttackEsq" to="KinematicBody2D" method="offRangeAttackEsq"]
[connection signal="body_entered" from="KinematicBody2D/RangedAttackDir" to="KinematicBody2D" method="onRangedAttackDir"]
[connection signal="body_exited" from="KinematicBody2D/RangedAttackDir" to="KinematicBody2D" method="offRangeAttackDir"]
[connection signal="body_entered" from="KinematicBody2D/MeleeAttackDir" to="KinematicBody2D" method="onMeleeAttackRangeDir"]
[connection signal="body_exited" from="KinematicBody2D/MeleeAttackDir" to="KinematicBody2D" method="offMeleeAttackDir"]
[connection signal="body_entered" from="KinematicBody2D/MeleeAttackEsq" to="KinematicBody2D" method="onMeleeAttackRangeEsq"]
[connection signal="body_exited" from="KinematicBody2D/MeleeAttackEsq" to="KinematicBody2D" method="offMeleeAttackEsq"]
[connection signal="body_entered" from="KinematicBody2D/LaserAttackDir" to="KinematicBody2D" method="onLaserAttackDir"]
[connection signal="body_exited" from="KinematicBody2D/LaserAttackDir" to="KinematicBody2D" method="offLaserAttackDir"]
[connection signal="body_entered" from="KinematicBody2D/LaserAttackEsq" to="KinematicBody2D" method="onLaserAttackEsq"]
[connection signal="body_exited" from="KinematicBody2D/LaserAttackEsq" to="KinematicBody2D" method="offLaserAttackEsq"]
